# ruwikipedia-search-tgbot

./: .cursorignore  .cursorrules  .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
src/: errors.rs  lib.rs  main.rs  wikipedia.rs
src/config/: languages.rs  mod.rs
src/handlers/: inline_query.rs  message.rs  mod.rs
src/models/: article.rs  language.rs  mod.rs
src/services/: mod.rs  wikidata.rs  wikipedia.rs
src/utils/: markdown.rs  mod.rs  text.rs
