[package]
name = "wiki-article-finder-telegram"
version = "1.0.1"
edition = "2021"
license = "WTFPL"
authors = ["Alina Chebakova"]
description = "Telegram bot for searching Wikipedia articles with inline mode"
repository = "https://github.com/username/wiki-article-finder-telegram"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
url = "2.5"
log = "0.4"
pretty_env_logger = "0.5"
urlencoding = "2.1"
dotenv = "0.15"
futures = "0.3.31"
