[package]
name = "wiki-article-finder-telegram"
version = "1.1.0"
edition = "2021"
license = "WTFPL"
authors = ["Alina Chebakova"]
description = "Telegram bot for searching Wikipedia articles with inline mode"
repository = "https://github.com/username/wiki-article-finder-telegram"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
urlencoding = "2.1"
dotenv = "0.15"
futures = "0.3.31"

# Error handling
thiserror = "1.0"

# Caching
moka = { version = "0.12", features = ["future"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async traits
async-trait = "0.1"

# Configuration
config = "0.14"
once_cell = "1.19"

# Text processing
regex = "1.10"
